--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,33 @@
     "version": 2,
     "builds": [
         {
-            "src": "./dist/server.js",
-            "use": "@vercel/node",
-            "config": {
-                "includeFiles": [
-                    "./dist/**"
-                ]
-            }
+            "src": "dist/server.js",
+            "use": "@vercel/node"
         }
     ],
-    "routes": [
+    "rewrites": [
         {
-            "src": "/(.*)",
-            "dest": "./dist/server.js"
+            "source": "/(.*)",
+            "destination": "/dist/server.js"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "http://donate-something.vercel.app/"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PATCH, PUT, DELETE, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type, Authorization,authorization"
+                }
+            ]
         }
     ]
 }
